[package]
name = "scryfall-api"
version = "0.1.0"
authors = ["Andrew Dobrich <andrew.dobrich@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
log = "0.4.8"
reqwest = "0.9.19"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
simplelog = "0.6.0"
time = "0.1.42"
